fix: Site name now visible

--- a/css/style.css
+++ b/css/style.css
@@ -248,9 +248,10 @@ a.link-image:hover {
     align-items: center;
 }
 
-.footer-logo-text {
+.footer-link {
     color: white;
 }
+
 
 /* media query for tablets  */
 
